[metadata]
name = accessjd
version = 0.0.1
author = Duane Goodner
author_email = dmgoodner@gmail.com
description = Manages write access given to Jetbrains ssh to Docker container

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    defusedxml
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jd_safety = accessjd.entrypoints.safety_check:main
    jd_access_status = accessjd.entrypoints.access_status:main
    jd_grant_access = accessjd.entrypoints.grant_access:main
    jd_revoke_access = accessjd.entrypoints.revoke_access:main